# safegaurd_ai

./: .dockerignore  .gitignore  README.md  check_backend_posts.py  common_questions.md  compliance_report.md  docker-compose.yml  fix_data_direct.py  personal_contribution_summary.md  run.sh  run_local.sh  run_tests.sh  stop.sh
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  auth_utils.py  backend_test_output.txt  check_users.py  fix_users.py  full_openapi.json  import_kaggle.py  main.py  metrics.py  models.py  pyproject.toml  stress_test.py  tasks.py  test.db  test_backend.py  test_users.py
backend/tests/: test_auth.py
docs/: compliance_report.md  personal_contribution_summary.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.cjs  tailwind_test.css  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: App.test.tsx  Auth.test.tsx
frontend/src/components/: AuthModal.tsx  BentoGrid.tsx  Dashboard.tsx  Footer.tsx  Hero.tsx  Navbar.tsx
frontend/src/pages/: DashboardPage.tsx  Home.tsx
ml-service/: Dockerfile  main.py  pyproject.toml
ml-service/tests/: test_main.py
